Porting to Colab

--- a/rPPG.ipynb
+++ b/rPPG.ipynb
@@ -1,6 +1,518 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import h5py\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "scamps_dir = \"dataset/scamps_videos_example/matrix/\"\n",
+    "scamps_labels_dir = \"dataset/scamps_videos_example/labels/\"\n",
+    "\n",
+    "scamps = [np.array(h5py.File(scamps_dir+mat,\"r\")[\"RawFrames\"]) for mat in os.listdir(scamps_dir)]\n",
+    "scamps_labels = [pd.read_csv(scamps_labels_dir+label)[\"d_ppg\"] for label in os.listdir(scamps_labels_dir)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Explore Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Keys: <KeysViewHDF5 ['RawFrames', 'Xsub', 'au12', 'au15', 'au17', 'au18', 'au2', 'au26', 'au27', 'au4', 'au45', 'au7', 'combined_mask', 'd_br', 'd_ekg', 'd_pitch', 'd_ppg', 'd_roll', 'd_yaw', 'numerical_mask', 'skin_mask']>\n",
+      "-------------------------------------------------------------\n",
+      "RawFrames Shape: (3, 320, 240, 600)\n",
+      "RawFrames Shape: (3, 320, 240, 600)\n",
+      "RawFrames Shape: (3, 320, 240, 600)\n",
+      "RawFrames Shape: (3, 320, 240, 600)\n",
+      "RawFrames Shape: (3, 320, 240, 600)\n",
+      "RawFrames Shape: (3, 320, 240, 600)\n",
+      "RawFrames Shape: (3, 320, 240, 600)\n",
+      "RawFrames Shape: (3, 320, 240, 600)\n",
+      "RawFrames Shape: (3, 320, 240, 600)\n",
+      "RawFrames Shape: (3, 320, 240, 600)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Keys: {scamps[0].keys()}\")\n",
+    "print(\"-------------------------------------------------------------\")\n",
+    "for mat in scamps:\n",
+    "    _ = np.array(scamps[0]['RawFrames'])\n",
+    "    print(f\"RawFrames Shape: {_.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>t_ppg</th>\n",
+       "      <th>d_ppg</th>\n",
+       "      <th>d_ekg</th>\n",
+       "      <th>d_br</th>\n",
+       "      <th>d_pitch</th>\n",
+       "      <th>d_roll</th>\n",
+       "      <th>d_yaw</th>\n",
+       "      <th>Eyebrows_Raised</th>\n",
+       "      <th>Eyebrows_Frown</th>\n",
+       "      <th>Eyes_Squint</th>\n",
+       "      <th>Smile_Lips_Closed</th>\n",
+       "      <th>Frown_Left</th>\n",
+       "      <th>Frown_Right</th>\n",
+       "      <th>Chin_Raised</th>\n",
+       "      <th>Kiss_Left</th>\n",
+       "      <th>Kiss_Right</th>\n",
+       "      <th>Mouth_Little_Opened</th>\n",
+       "      <th>Mouth_Large_Opened</th>\n",
+       "      <th>Upper_Eyelid_Dn_Left</th>\n",
+       "      <th>Upper_Eyelid_Dn_Right</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.047937</td>\n",
+       "      <td>0.043687</td>\n",
+       "      <td>0.001075</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.033333</td>\n",
+       "      <td>0.077986</td>\n",
+       "      <td>0.043687</td>\n",
+       "      <td>0.008512</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.066667</td>\n",
+       "      <td>0.150900</td>\n",
+       "      <td>0.043687</td>\n",
+       "      <td>0.016815</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>0.276795</td>\n",
+       "      <td>0.043687</td>\n",
+       "      <td>0.025583</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.133333</td>\n",
+       "      <td>0.471687</td>\n",
+       "      <td>0.043687</td>\n",
+       "      <td>0.034887</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>595</th>\n",
+       "      <td>19.833333</td>\n",
+       "      <td>0.435019</td>\n",
+       "      <td>0.043633</td>\n",
+       "      <td>0.763778</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>596</th>\n",
+       "      <td>19.866667</td>\n",
+       "      <td>0.269259</td>\n",
+       "      <td>0.044709</td>\n",
+       "      <td>0.793330</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>597</th>\n",
+       "      <td>19.900000</td>\n",
+       "      <td>0.172531</td>\n",
+       "      <td>0.024561</td>\n",
+       "      <td>0.822593</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>598</th>\n",
+       "      <td>19.933333</td>\n",
+       "      <td>0.127368</td>\n",
+       "      <td>0.398300</td>\n",
+       "      <td>0.851809</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>599</th>\n",
+       "      <td>19.966667</td>\n",
+       "      <td>0.104992</td>\n",
+       "      <td>0.256717</td>\n",
+       "      <td>0.879003</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>600 rows × 20 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         t_ppg     d_ppg     d_ekg      d_br  d_pitch  d_roll  d_yaw  \\\n",
+       "0     0.000000  0.047937  0.043687  0.001075        0       0      0   \n",
+       "1     0.033333  0.077986  0.043687  0.008512        0       0      0   \n",
+       "2     0.066667  0.150900  0.043687  0.016815        0       0      0   \n",
+       "3     0.100000  0.276795  0.043687  0.025583        0       0      0   \n",
+       "4     0.133333  0.471687  0.043687  0.034887        0       0      0   \n",
+       "..         ...       ...       ...       ...      ...     ...    ...   \n",
+       "595  19.833333  0.435019  0.043633  0.763778        0       0      0   \n",
+       "596  19.866667  0.269259  0.044709  0.793330        0       0      0   \n",
+       "597  19.900000  0.172531  0.024561  0.822593        0       0      0   \n",
+       "598  19.933333  0.127368  0.398300  0.851809        0       0      0   \n",
+       "599  19.966667  0.104992  0.256717  0.879003        0       0      0   \n",
+       "\n",
+       "     Eyebrows_Raised  Eyebrows_Frown  Eyes_Squint  Smile_Lips_Closed  \\\n",
+       "0                  0               0            0                  0   \n",
+       "1                  0               0            0                  0   \n",
+       "2                  0               0            0                  0   \n",
+       "3                  0               0            0                  0   \n",
+       "4                  0               0            0                  0   \n",
+       "..               ...             ...          ...                ...   \n",
+       "595                0               0            0                  0   \n",
+       "596                0               0            0                  0   \n",
+       "597                0               0            0                  0   \n",
+       "598                0               0            0                  0   \n",
+       "599                0               0            0                  0   \n",
+       "\n",
+       "     Frown_Left  Frown_Right  Chin_Raised  Kiss_Left  Kiss_Right  \\\n",
+       "0             0            0            0          0           0   \n",
+       "1             0            0            0          0           0   \n",
+       "2             0            0            0          0           0   \n",
+       "3             0            0            0          0           0   \n",
+       "4             0            0            0          0           0   \n",
+       "..          ...          ...          ...        ...         ...   \n",
+       "595           0            0            0          0           0   \n",
+       "596           0            0            0          0           0   \n",
+       "597           0            0            0          0           0   \n",
+       "598           0            0            0          0           0   \n",
+       "599           0            0            0          0           0   \n",
+       "\n",
+       "     Mouth_Little_Opened  Mouth_Large_Opened  Upper_Eyelid_Dn_Left  \\\n",
+       "0                      0                   0                   0.0   \n",
+       "1                      0                   0                   0.0   \n",
+       "2                      0                   0                   0.0   \n",
+       "3                      0                   0                   0.0   \n",
+       "4                      0                   0                   0.0   \n",
+       "..                   ...                 ...                   ...   \n",
+       "595                    0                   0                   0.0   \n",
+       "596                    0                   0                   0.0   \n",
+       "597                    0                   0                   0.0   \n",
+       "598                    0                   0                   0.0   \n",
+       "599                    0                   0                   0.0   \n",
+       "\n",
+       "     Upper_Eyelid_Dn_Right  \n",
+       "0                      0.0  \n",
+       "1                      0.0  \n",
+       "2                      0.0  \n",
+       "3                      0.0  \n",
+       "4                      0.0  \n",
+       "..                     ...  \n",
+       "595                    0.0  \n",
+       "596                    0.0  \n",
+       "597                    0.0  \n",
+       "598                    0.0  \n",
+       "599                    0.0  \n",
+       "\n",
+       "[600 rows x 20 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scamps_labels[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Make and Prepare Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "from modules import processing\n",
+    "\n",
+    "frame_standardization = processing.StandardizeFrame(target_resolution=(640,480),target_frame_rate=30,target_color_space=cv2.COLOR_BGR2RGB)\n",
+    "HR_dataset_formaxion = processing.HRcompute(0.4,4,4,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for s in range(len(scamps)):\n",
+    "    data = np.array(np.split(scamps[s],int(600/8),axis=-1))\n",
+    "    data = np.transpose(data,[0,4,2,3,1])\n",
+    "    scamps[s] = data.reshape(75*8, 320, 240, 3)\n",
+    "del data\n",
+    "no_s = len(scamps)\n",
+    "scamps = np.array(scamps).reshape(no_s*75,8,320,240,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(75, 8, 320, 240, 3)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scamps = frame_standardization.standardize(scamps,current_frame_rate=1)\n",
+    "scamps.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pipeline"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -156,11 +668,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HEART RATE: 77.5 BPM\n",
-      "HEART RATE: 72.5 BPM\n",
-      "HEART RATE: 97.5 BPM\n",
-      "HEART RATE: 97.5 BPM\n",
-      "HEART RATE: 110.0 BPM\n"
+      "HEART RATE: 75.0 BPM\n",
+      "HEART RATE: 100.0 BPM\n",
+      "HEART RATE: 90.0 BPM\n",
+      "HEART RATE: 72.5 BPM\n"
      ]
     }
    ],
